[gd_scene load_steps=10 format=2]

[ext_resource path="res://cycle/npcs/npc.gd" type="Script" id=1]
[ext_resource path="res://cycle/player_proximity_detector.tscn" type="PackedScene" id=2]
[ext_resource path="res://cycle/stations/order_station/store_open.wav" type="AudioStream" id=3]
[ext_resource path="res://hud_theme.tres" type="Theme" id=4]
[ext_resource path="res://ninepatch.png" type="Texture" id=5]
[ext_resource path="res://cycle/stations/order_station/store_close.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("z_index:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("z_index:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_in_text"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("z_index:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("z_index:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 16 ), Vector2( 0, 0 ) ]
}

[node name="npc" type="Node2D"]
script = ExtResource( 1 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]

[node name="player_proximity_detector" parent="." instance=ExtResource( 2 )]

[node name="collision_shape_2d" type="CollisionShape2D" parent="player_proximity_detector"]
shape = SubResource( 1 )

[node name="z_index" type="Node2D" parent="."]
z_index = 10

[node name="margin_container" type="MarginContainer" parent="z_index"]
margin_left = -56.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 35.0
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nine_patch_rect" type="NinePatchRect" parent="z_index/margin_container"]
margin_right = 112.0
margin_bottom = 24.0
texture = ExtResource( 5 )
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="margin_container" type="MarginContainer" parent="z_index/margin_container"]
margin_right = 112.0
margin_bottom = 24.0
custom_constants/margin_right = 3
custom_constants/margin_top = 3
custom_constants/margin_left = 3
custom_constants/margin_bottom = 3

[node name="dialogue_label" type="RichTextLabel" parent="z_index/margin_container/margin_container"]
margin_left = 3.0
margin_top = 3.0
margin_right = 109.0
margin_bottom = 21.0
bbcode_enabled = true
bbcode_text = "[center]fish[/center]"
meta_underlined = false
text = "fish"
fit_content_height = true
scroll_active = false

[node name="text_animation_player" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/fade_in_text = SubResource( 2 )

[node name="dialogue_duration" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="open_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 2.0
bus = "Effects"

[node name="close_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
pitch_scale = 2.0
bus = "Effects"

[connection signal="timeout" from="dialogue_duration" to="." method="_on_dialogue_duration_timeout"]
